Revert "K1J-1881: Fix XmlGeneratorText to handle blank values."
This reverts commit cf79926b6dd88867e7b207f5e4e9778a956babbc.